Fix sticky button mobile

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -680,12 +680,14 @@ Utilities
     position: sticky;
     top: 90vh;
     z-index: 10;
-    font-weight: bold;
+    justify-content: center;
+    width: 100%;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
     .local-report-download-btn  {
         left: 50%;
         transform: translateX(-50%);
+        width: auto;
     }
 }
